# EasyQuaternion

./: CMakeLists.txt  README.md  conanfile.py
Quaternion/: CMakeLists.txt  Quaternion.cpp  Quaternion.h  QuaternionSlerp.cpp  QuaternionSlerp.h
Tests/: CMakeLists.txt  main.cpp
